--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     
         <div class="card">
-            <img src="/img/image.png" alt="Image 2">
+            <img src="assets/img/gambar.jpg" alt="Image 2">
             <div class="card-content">
                 <h3>My favorite Thing 2</h3>
                 <p>Sampai sekarang pun saya tidak tau kenapa saya bisa suka sama beliau ini</p>
