--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section id="card">
     <div class="card-container">
         <div class="card">
-            <img src="/img/image2.png" alt="Image 1">
+            <img src="assets/img/image2" alt="Image 1">
             <div class="card-content">
                 <h3>My favorite Thing 1</h3>
                 <p>Saya menyukai beliau, tetapi saya tidak tau kenapa saya bisa menyukai beliau</p>
@@ -51,7 +51,7 @@
         </div>
     
         <div class="card">
-            <img src="/img/image1.png" alt="Image 3">
+            <img src="assets/img/image1.png" alt="Image 3">
             <div class="card-content">
                 <h3>My favorite Thing 3</h3>
                 <p>Beliau sangat cantik bukan? tetapi beliau ini kaya anak kecil hahahhah, tetapi beliau lucu</p>
