--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
 <header>
     <nav class="navbar">
-        <a href="#" class="logo">My Favorite Things</a>
-        <ul id="nav-links">
-            <li><a href="#card">Favorite</a></li>
-            <li><a href="#alasan">Alasan</a></li>
-            <li><a href="#kontak">Tentang Saya</a></li>
-        </ul>
-        <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+        <div class="navbar">
+            <div class="dropdown">
+                <button class="dropbtn">Favorite 
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="index.html">Game</a>
+                    <a href="hal.html">Kuliah</a>
+                    <a href="olahraga.html">Olahraga</a>
+                </div>
+            </div> 
+            <a href="tentang.html">About Me</a>
+            <a href="#logo" class="logo">My Favorite Things</a>
+        </div>
     </nav>
-
-    <script>
-        function toggleMenu() {
-            const navLinks = document.getElementById("nav-links");
-            navLinks.classList.toggle("show");
-        }
-    </script>
 </header>
 
 <br>
@@ -32,48 +32,37 @@
 <section id="card">
     <div class="card-container">
         <div class="card">
-            <img src="./img/image2.png" alt="Image 1">
+            <embed type="video/webm" src="./vid/pubg.mp4" width="300" height="200">
             <div class="card-content">
-                <h3>My favorite Thing 1</h3>
-                <p>Saya menyukai beliau, tetapi saya tidak tau kenapa saya bisa menyukai beliau</p>
-                <a href="https://www.instagram.com/stories/highlights/18277302646174856/" class="href">About Her</a>
+                <h3>PUBG</h3>
+                <p>Game ini bergenre Battle Royale</p><br>
+                <ul>
+                    <li>Saya menyukai Pubg karena Game ini seru walaupun kadang bikin kepala saya pusing.</li>
+                </ul><br>
             </div>
         </div>
     
         <div class="card">
-            <img src="./img/image.png" alt="Image 2">
+            <embed type="video/webm" src="./vid/Free Fire Official Trailer _ Free Fire Official.mp4" width="300" height="200">
             <div class="card-content">
-                <h3>My favorite Thing 2</h3>
-                <p>Sampai sekarang pun saya tidak tau kenapa saya bisa suka sama beliau ini</p>
-                <a href="https://www.instagram.com/stories/highlights/18277302646174856/" class="href">About Her</a>
-
+                <h3>Free Fire</h3>
+                <p>Game ini bergenre Battle Royale</p><br>
+                <ul>
+                    <li>Saya menyukai Free Fire ini karena game ini yang menemani masa saya saat masih di landa corona.</li>
+                </ul><br>
             </div>
         </div>
     
         <div class="card">
-            <img src="./img/image1.png" alt="Image 3">
-            <div class="card-content">
-                <h3>My favorite Thing 3</h3>
-                <p>Beliau sangat cantik bukan? tetapi beliau ini kaya anak kecil hahahhah, tetapi beliau lucu</p>
-                <a href="https://www.instagram.com/stories/highlights/18277302646174856/" class="href">About Her</a>
-
+            <embed type="video/webm" src="./vid/Clash Royale Official Epic Comeback Trailer.mp4" width="300" height="200">
+                <div class="card-content">
+                <h3>Clash Royale</h3>
+                <p>Game ini bergenre battle royale yang menggunakan card sebagai hero</p><br>
+                <ul>
+                    <li>Saya menyukai Clash Royale karena game ini yang menemani saya disaat saya masih kecil.</li>
+                </ul><br>
             </div>
         </div>
-    </div>
-</section>
-
-<br>
-<section id="alasan">
-    <div>
-        <h1>Alasan saya menyukai ke-3 hal ini</h1>
-        <div class="list">
-            <li>Karena saya ingin menjaga dia</li>
-            <li>Karena saya ingin membuat dia tersenyum</li>
-            <li>Karena saya ingin membuat dia merasa ada yang peduli dengan nya</li>
-            <li>Karena saya ingin membuat dia merasa tidak sendirian</li>
-            <li>Karena saya ingin membuat dia merasa nyaman dengan hidup nya</li>
-            <li>Karena saya ingin membuat dia merasa sangat di hargai di dunia ini</li>
-        </div><br>
     </div>
 </section>
 
