--- a/tentang.html
+++ b/tentang.html
@@ -22,6 +22,7 @@
                 </div>
             </div> 
             <a href="tentang.html">About Me</a>
+            <a href="#logo" class="logo">My Favorite Things</a>
           </div>
     </nav>
 </header>
