--- a/index.html
+++ b/index.html
@@ -10,29 +10,27 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="navbar">
-            <div class="dropdown">
-                <button class="dropbtn">Favorite 
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="index.html">Game</a>
-                    <a href="hal.html">Kuliah</a>
-                    <a href="olahraga.html">Olahraga</a>
-                </div>
-            </div> 
-            <a href="tentang.html">About Me</a>
-            <a href="#logo" class="logo">My Favorite Things</a>
-        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Favorite 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="index.html">Game</a>
+                <a href="hal.html">Kuliah</a>
+                <a href="olahraga.html">Olahraga</a>
+            </div>  
+        </div> 
+        <a href="tentang.html">About Me</a>
+        <a href="#logo" class="logo">My Favorite Things</a>
     </nav>
 </header>
 
 <br>
-<!-- card section -->
+
 <section id="card">
     <div class="card-container">
         <div class="card">
-            <embed type="video/webm" src="./vid/pubg.mp4" width="300" height="200">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/uCd6tbUAy6o?si=KZInaA8OZR5BO1K2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="card-content">
                 <h3>PUBG</h3>
                 <p>Game ini bergenre Battle Royale</p><br>
@@ -43,7 +41,7 @@
         </div>
     
         <div class="card">
-            <embed type="video/webm" src="./vid/Free Fire Official Trailer _ Free Fire Official.mp4" width="300" height="200">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/oq2Rz2I11l0?si=b7BhSrSFUQyqm14Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="card-content">
                 <h3>Free Fire</h3>
                 <p>Game ini bergenre Battle Royale</p><br>
@@ -54,7 +52,7 @@
         </div>
     
         <div class="card">
-            <embed type="video/webm" src="./vid/Clash Royale Official Epic Comeback Trailer.mp4" width="300" height="200">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/1RC1yxqTTd8?si=rtT4SnoMlpfp3BVe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="card-content">
                 <h3>Clash Royale</h3>
                 <p>Game ini bergenre battle royale yang menggunakan card sebagai hero</p><br>
