--- a/olahraga.html
+++ b/olahraga.html
@@ -32,7 +32,7 @@
 <section id="card">
     <div class="card-container">
         <div class="card">
-            <embed type="video/webm" src="./vid/badminton.mp4" width="300" height="200">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/kG7-ZiyQMPA?si=cBR1bHvggxw_85p7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="card-content">
                 <h3>Badminton</h3>
                 <p>adalah olahraga raket yang dimainkan dengan memukul kok (shuttlecock) melewati net.</p><br>
